--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prettier",
-  "version": "1.20.0-dev",
+  "version": "1.18.2",
   "description": "Prettier is an opinionated code formatter",
   "bin": {
     "prettier": "./bin/prettier.js"
@@ -16,10 +16,10 @@
   "dependencies": {
     "@angular/compiler": "8.2.13",
     "@babel/code-frame": "7.5.5",
-    "@babel/parser": "7.7.3",
+    "@babel/parser": "7.6.4",
     "@glimmer/syntax": "0.41.0",
     "@iarna/toml": "2.2.3",
-    "@typescript-eslint/typescript-estree": "2.6.1",
+    "@typescript-eslint/typescript-estree": "2.6.0",
     "angular-estree-parser": "1.1.5",
     "angular-html-parser": "1.3.0",
     "camelcase": "5.3.1",
@@ -35,7 +35,7 @@
     "esutils": "2.0.3",
     "find-parent-dir": "0.3.0",
     "find-project-root": "1.1.1",
-    "flow-parser": "0.111.3",
+    "flow-parser": "0.89.0",
     "get-stream": "5.1.0",
     "globby": "6.1.0",
     "graphql": "14.5.8",
@@ -56,7 +56,7 @@
     "n-readlines": "1.0.0",
     "normalize-path": "3.0.0",
     "parse-srcset": "ikatyang/parse-srcset#54eb9c1cb21db5c62b4d0e275d7249516df6f0ee",
-    "postcss-less": "2.0.0",
+    "postcss-less": "1.1.5",
     "postcss-media-query-parser": "0.2.3",
     "postcss-scss": "2.0.0",
     "postcss-selector-parser": "2.2.3",
@@ -67,23 +67,23 @@
     "resolve": "1.12.0",
     "semver": "6.3.0",
     "string-width": "4.1.0",
-    "typescript": "3.7.2",
+    "typescript": "3.7.1-rc",
     "unicode-regex": "3.0.0",
     "unified": "8.4.1",
     "vnopts": "1.0.2",
     "yaml-unist-parser": "1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "7.7.2",
-    "@babel/preset-env": "7.7.1",
+    "@babel/core": "7.6.3",
+    "@babel/preset-env": "7.6.3",
     "@rollup/plugin-alias": "2.2.0",
-    "@rollup/plugin-replace": "2.2.1",
+    "@rollup/plugin-replace": "2.2.0",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
     "builtin-modules": "3.1.0",
-    "codecov": "3.6.1",
+    "codecov": "codecov/codecov-node#e427d900309adb50746a39a50aa7d80071a5ddd0",
     "cross-env": "6.0.3",
-    "eslint": "6.6.0",
+    "eslint": "6.5.1",
     "eslint-config-prettier": "6.5.0",
     "eslint-formatter-friendly": "7.0.0",
     "eslint-plugin-import": "2.18.2",
@@ -96,10 +96,10 @@
     "jest-snapshot-serializer-raw": "1.1.0",
     "jest-watch-typeahead": "0.4.0",
     "mkdirp": "0.5.1",
-    "prettier": "1.19.0",
+    "prettier": "1.18.2",
     "prettylint": "1.0.0",
     "rimraf": "3.0.0",
-    "rollup": "1.26.3",
+    "rollup": "1.26.0",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
@@ -111,7 +111,7 @@
     "strip-ansi": "5.2.0",
     "synchronous-promise": "2.0.10",
     "tempy": "0.2.1",
-    "terser-webpack-plugin": "2.2.1",
+    "terser-webpack-plugin": "2.1.3",
     "webpack": "4.41.2"
   },
   "scripts": {
@@ -130,6 +130,6 @@
     "build": "node --max-old-space-size=3072 ./scripts/build/build.js",
     "build-docs": "node ./scripts/build-docs.js",
     "check-deps": "node ./scripts/check-deps.js",
-    "spellcheck": "npx -p cspell@4.0.31 cspell {bin,scripts,src}/**/*.js {docs,website/blog,changelog_unreleased}/**/*.md"
+    "spellcheck": "npx -p cspell@4.0.31 cspell {bin,scripts,src}/**/*.js {docs,website/blog}/**/*.md CHANGELOG.unreleased.md"
   }
 }
