--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@babel/preset-env": "7.7.1",
     "@rollup/plugin-alias": "2.2.0",
     "@rollup/plugin-replace": "2.2.1",
+    "@stryker-mutator/core": "2.2.1",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
     "builtin-modules": "3.1.0",
