testing: initialize Stryker mutator
as described in: https://stryker-mutator.io/stryker/quickstart

$ npx stryker init
? Are you using one of these frameworks? Then select a preset configuration. None/other
? Which test runner do you want to use? If your test runner isn't listed here, you can choose "command" (it uses your `npm test` command, but will come with a big performance penalty) command
? What kind of code do you want to mutate? javascript
? [optional] What kind transformations should be applied to your code?
? Which reporter(s) do you want to use? html, clear-text, progress
? Which package manager do you want to use? yarn
Writing & formatting stryker.conf.js...
Installing NPM dependencies...

and add the following line to the beginning of stryker.conf.js
(with another blank line)
to make lint (eslint) happy:

"use strict";

--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "@rollup/plugin-alias": "2.2.0",
     "@rollup/plugin-replace": "2.2.1",
     "@stryker-mutator/core": "2.2.1",
+    "@stryker-mutator/html-reporter": "2.2.1",
+    "@stryker-mutator/javascript-mutator": "2.2.1",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
     "builtin-modules": "3.1.0",
