--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,6 +8,7 @@ extends:
   - plugin:prettier/recommended
 plugins:
   - import
+  - unicorn
 rules:
   curly: error
   import/no-extraneous-dependencies:
@@ -32,3 +33,4 @@ rules:
     - error
     - never
     - exceptRange: true
+  unicorn/new-for-builtins: error
