--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "jest-watch-typeahead": "0.4.2",
     "mkdirp": "0.5.1",
     "prettier": "1.19.1",
-    "prettylint": "1.0.0",
     "rimraf": "3.0.0",
     "rollup": "1.26.3",
     "rollup-plugin-babel": "4.3.3",
@@ -125,7 +124,7 @@
     "perf-benchmark": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-benchmark --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
     "check-types": "tsc",
     "lint": "cross-env EFF_NO_LINK_RULES=true eslint . --format friendly",
-    "lint-docs": "prettylint {.,docs,website,website/blog}/*.md",
+    "lint-docs": "prettier {.,docs,website,website/blog}/*.md --check",
     "lint-dist": "eslint --no-eslintrc --no-ignore --env=browser \"dist/!(bin-prettier|index|third-party).js\"",
     "build": "node --max-old-space-size=3072 ./scripts/build/build.js",
     "build-docs": "node ./scripts/build-docs.js",
