--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@babel/core": "7.7.2",
     "@babel/preset-env": "7.7.1",
     "@rollup/plugin-alias": "2.2.0",
+    "@rollup/plugin-json": "4.0.0",
     "@rollup/plugin-replace": "2.2.1",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
@@ -101,7 +102,6 @@
     "rollup": "1.26.3",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "5.1.2",
