--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,7 @@
 /scripts/release/node_modules
 *.log
 /errors
-/test.js
-/test.json
-/test.ts
-/test.tsx
-/test.css
-/test.scss
-/test.less
-/test.html
-/test.vue
-/test.yml
-/test.md
-/test.mdx
-/test.graphql
+/test.*
 /.vscode
 /dist
 /website/node_modules
